# PyNeuraLogic

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  dgl_test.py  dynet_test.py  full_requirements.txt  main.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  tests.yml
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: dgl_benchmark.py  helpers.py  pyg_benchmark.py  pyneuralogic_benchmark.py  run.py  spektral_benchmark.py  utils.py  visualize.py
docs/: advanced.rst  benchmarks.rst  conf.py  cookbook.rst  custom_model.rst  database_deep_learning.rst  eval_inference_engine.rst  evaluation.rst  examples.rst  heterogeneous.rst  heterophily.rst  hooks.rst  hypergraphs.rst  index.rst  inference_engine.rst  installation.rst  java_gateway.rst  java_settings_and_debugging.rst  language.rst  metadata.rst  modifiers.rst  neuralogic.core.builder.rst  neuralogic.core.constructs.rst  neuralogic.core.rst  neuralogic.core.settings.rst  neuralogic.jar.rst  neuralogic.nn.evaluators.rst  neuralogic.nn.native.rst  neuralogic.nn.rst  neuralogic.rst  neuralogic.utils.data.rst  neuralogic.utils.rst  neuralogic.utils.templates.modules.rst  neuralogic.utils.templates.rst  neuralogic.utils.visualize.rst  pattern_propagation.rst  quick_start.rst  recursive_xor.rst  rules_mapping.rst  tabnet.rst  (+3 more)
examples/: DatabaseTrains.ipynb  DatasetUsage.ipynb  DistinguishingKRegularGraphs.ipynb  DistinguishingNonRegularGraphs.ipynb  DummyNotebook.ipynb  HooksJavaDynet.ipynb  IntroductionIntoPyNeuraLogic.ipynb  KarateClub.ipynb  MolecularGNN.ipynb  Mutagenesis.ipynb  MyDummyNotebook.ipynb  MyHandout.ipynb  MyNewSyntaxTesting.ipynb  MyPytorchExample.ipynb  MyTest.ipynb  MyVariableVariant.ipynb  PatternMatching.ipynb  PredicateHooks.ipynb  RecursiveXORGeneralization.ipynb  SimpleXOR.ipynb  TimeSeriesLSTM.ipynb  Visual_Test.ipynb  Visualization.ipynb  Working_With_NeuraLogic_Evaluators.ipynb  Working_With_Problems.ipynb  Writing_Custom_Java_Loop.ipynb  dynet_evaluator.py  java_evaluator.py  pyg_example.ipynb  pyg_example.py  quickstart_tutorial.ipynb  vocab.md  (+4 more)
(+396 files in other folders)
