[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "neuralogic"
version = "0.8.12.dev"
description = "PyNeuraLogic lets you use Python to create Differentiable Logic Programs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lukáš Zahradník", email = "lukaszahradnik96@seznam.cz"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "JPype1>=1.3.0",
    "numpy>=1.20.4",
    "matplotlib",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/LukasZahradnik/PyNeuraLogic"

[project.optional-dependencies]
dev = [
    "pre-commit>=2.10.1",
    "pytest",
    "pytest-cov",
    "ruff",
]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-tabs",
    "sphinx-copybutton",
]
examples = [
    "jupyter>=1.0.0",
]
torch = [
    "torch",
    "torch_geometric",
]

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*", "benchmarks*"]

[tool.setuptools.package-data]
neuralogic = ["jar/NeuraLogic.jar"]
"neuralogic.utils.data" = ["datasets/**"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N"]
ignore = ["E501", "E203", "N802"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ALL"]
"examples/*" = ["ALL"]
"benchmarks/*" = ["ALL"]

[tool.coverage.run]
source = ["neuralogic"]
omit = [
    "tests/*",
    "examples/*",
    "benchmarks/*",
    "neuralogic/jar/*",
    "neuralogic/utils/data/datasets/*",
]

[tool.coverage.report]
exclude_lines = ["raise", "except"]

[tool.mypy]
ignore_missing_imports = true
